<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Structure_Error" Id="{55e2ca63-eaa5-4304-9730-bc68bea3f114}">
    <Declaration><![CDATA[TYPE Structure_Error :
STRUCT
	isError : BOOL := FALSE;
	errorMessage : STRING(300);
	errorType	: USINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>