<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Axes" Id="{3ae6a13e-dcbe-43f5-aff9-b8ca929b0c94}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AxisWest : AXIS_REF; // Left when facing robot
	AxisEast : AXIS_REF; // Right when facing robot
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>