<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_SERVO_ROBOT_CONST" Id="{63c8ac0d-8c4b-4022-b5cd-cf33f8211901}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
//Position of the robot at the centre of the gantry at max and min travel of the gantry.

VAR_GLOBAL CONSTANT
	MIN_POS_ROBOT : LREAL := 961.833; // Position of robot at min travel servo
	MAX_POS_ROBOT : LREAL := 3271.799; // Position of robot at max travel servo
	MAX_POS_SERVOWEST : LREAL := 2310; // max travel of servo
 	MIN_POS_SERVOWEST : LREAL := 1; // min travel of servo
	DIFFERENCE_ROBOT : LREAL := MAX_POS_ROBOT - MIN_POS_ROBOT;
	DIFFERENCE_SERVOWEST : LREAL := MAX_POS_SERVOWEST - MIN_POS_SERVOWEST;
	POSITION_LIMIT_SWITCH : LREAL := 417.4;
	FOLLOW_THRESHOLD : LREAL := 24; //mm, min distance between dust boot and rollers
	ROLLERS_Z_HEIGHT : LREAL := 800; // Robot tool z height at rollers
	ROLLERS_Z_HEIGHT_RAISED : REAL := 707;
	ROLLERS_Z_HEIGHT_LOWERED : REAL := 635;
	INNER_ROLLERS_SPACING : LREAL := 506; //Distance between two centre rollers, mm
	OUTER_ROLLERS_SPACING : LREAL := 977;
	EAST_LASER_MAX_TRAVEL: LREAL := 2305.99;
	EAST_LASER_MAX_RAWVALUE: LREAL := 30441;
	WEST_LASER_MAX_TRAVEL: LREAL := 2306;
	WEST_LASER_MAX_RAWVALUE: LREAL := 30428;
	EAST_LASER_MIN_TRAVEL: LREAL := 0.99;
	EAST_LASER_MIN_RAWVALUE: LREAL := 279;
	WEST_LASER_MIN_TRAVEL: LREAL := 1;
	WEST_LASER_MIN_RAWVALUE: LREAL := 276;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>